# KSNP

./: CMakeLists.txt  README.md  cut_bubble.cpp  cut_bubble.h  install.sh  ksnp_reader.cpp  ksnp_reader.h  main.cpp  phased_block.cpp  phased_block.h  realignment.cpp  realignment.h  snp_dbg.cpp  snp_dbg.h  time_stamp.h  vcf_reader.cpp  vcf_reader.h
htslib/: bgzf.h  cram.h  faidx.h  hfile.h  hts.h  hts_defs.h  hts_endian.h  hts_expr.h  hts_log.h  hts_os.h  kbitset.h  kfunc.h  khash.h  khash_str2int.h  klist.h  knetfile.h  kroundup.h  kseq.h  ksort.h  kstring.h  regidx.h  sam.h  synced_bcf_reader.h  tbx.h  thread_pool.h  vcf.h  vcf_sweep.h  vcfutils.h
test/: aln.bam  aln.bam.bai  expect_output.vcf  ref.fa  ref.fa.fai  variants.vcf
